# micropython-dftds

./: README.md  calibrate.py  kvalue_repository_flash.py  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
dftds/: __init__.py  kvalue_repository.py  kvalue_repository_flash.py  tds.py
tests/: test_k_value_repository_flash.py  test_tds.py
