# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micropython-dftds"
version = "0.0.1"
description = "Library to use the TDS module with micropython"
readme = "README.md"
authors = [{ name = "WendelHime", email = "wendelhime@hotmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python :: Implementation :: MicroPython"
]
keywords = ["dftds", "tds"]
dependencies = []

[project.optional-dependencies]
dev = ["ujson", "unittest", "unittest-discover"]

[project.urls]
Homepage = "https://github.com/WendelHime/micropython-dftds"
